@@ -20,10 +20,10 @@ import java.io.IOException;
 import java.lang.reflect.Array;
 import java.nio.ByteBuffer;
 import java.nio.charset.StandardCharsets;
+import java.util.AbstractMap;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Base64;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.LinkedHashSet;
@@ -113,7 +113,7 @@ public class TermVectorComponent extends SearchComponent {
           ? fieldNames
           :
           // return empty set indicating no fields should be used
-          Collections.emptySet();
+          Set.of();
     }
 
     // otherwise us the raw fldList as is, no special parsing or globs
@@ -422,8 +422,8 @@ public class TermVectorComponent extends SearchComponent {
 
       @SuppressWarnings("unchecked")
       Map.Entry<String, Object>[] arr =
-          (NamedList.NamedListEntry<Object>[])
-              Array.newInstance(NamedList.NamedListEntry.class, rb.resultIds.size());
+          (Map.Entry<String, Object>[])
+              Array.newInstance(AbstractMap.SimpleEntry.class, rb.resultIds.size());
 
       for (ShardRequest sreq : rb.finished) {
         if ((sreq.purpose & ShardRequest.PURPOSE_GET_FIELDS) == 0
