@@ -26,7 +26,6 @@ import java.io.StringWriter;
 import java.lang.invoke.MethodHandles;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.Date;
 import java.util.List;
 import java.util.Map;
@@ -277,31 +276,31 @@ public abstract class AuditLoggerPlugin implements Closeable, Runnable, SolrInfo
     numLogged =
         new AttributedLongCounter(
             solrMetricsContext.longCounter(
-                "solr_auditlogger_count",
+                "solr.auditlogger.count",
                 "The number of audit events that were successfully logged."),
             attrsWithCategory);
     numErrors =
         new AttributedLongCounter(
             solrMetricsContext.longCounter(
-                "solr_auditlogger_errors", "The number of audit events that resulted in errors."),
+                "solr.auditlogger.errors", "The number of audit events that resulted in errors."),
             attrsWithCategory);
     numLost =
         new AttributedLongCounter(
             solrMetricsContext.longCounter(
-                "solr_auditlogger_lost",
+                "solr.auditlogger.lost",
                 "The number of audit events that were lost due to async queue being full."),
             attrsWithCategory);
     requestTimes =
         new AttributedLongTimer(
             this.solrMetricsContext.longHistogram(
-                "solr_auditlogger_request_times",
+                "solr.auditlogger.request_times",
                 "Distribution of audit event request durations",
                 OtelUnit.NANOSECONDS),
             attrsWithCategory);
 
     if (async) {
       solrMetricsContext.observableLongGauge(
-          "solr_auditlogger_queue",
+          "solr.auditlogger.queue",
           "Metrics around the audit logger queue when running in async mode",
           (observableLongMeasurement -> {
             observableLongMeasurement.record(
@@ -314,7 +313,7 @@ public abstract class AuditLoggerPlugin implements Closeable, Runnable, SolrInfo
       queuedTime =
           new AttributedLongTimer(
               solrMetricsContext.longHistogram(
-                  "solr_auditlogger_queued_time",
+                  "solr.auditlogger.queued_time",
                   "Distribution of time events spend queued before processing",
                   OtelUnit.NANOSECONDS),
               attrsWithCategory);
@@ -323,7 +322,7 @@ public abstract class AuditLoggerPlugin implements Closeable, Runnable, SolrInfo
     AttributedLongGauge asyncEnabledGauge =
         new AttributedLongGauge(
             solrMetricsContext.longGauge(
-                "solr_auditlogger_async_enabled",
+                "solr.auditlogger.async_enabled",
                 "Whether the audit logger is running in async mode (1) or not (0)"),
             attrsWithCategory);
     asyncEnabledGauge.set(async ? 1L : 0L);
@@ -388,12 +387,8 @@ public abstract class AuditLoggerPlugin implements Closeable, Runnable, SolrInfo
       log.info("Shutting down async Auditlogger background thread(s)");
       ExecutorUtil.shutdownNowAndAwaitTermination(executorService);
       executorService = null;
-      try {
-        SolrInfoBean.super.close();
-      } catch (Exception e) {
-        throw new IOException("Exception closing", e);
-      }
     }
+    SolrInfoBean.super.close();
   }
 
   /**
@@ -433,7 +428,7 @@ public abstract class AuditLoggerPlugin implements Closeable, Runnable, SolrInfo
               .forEach(
                   l -> {
                     if (l instanceof String) {
-                      rules.add(Collections.singletonList(parseRule(l)));
+                      rules.add(List.of(parseRule(l)));
                     } else if (l instanceof List) {
                       List<MuteRule> rl = new ArrayList<>();
                       ((List<?>) l).forEach(r -> rl.add(parseRule(r)));
