@@ -38,7 +38,6 @@ import org.apache.solr.common.SolrInputDocument;
 import org.apache.solr.common.cloud.DocCollection;
 import org.apache.solr.common.cloud.Replica;
 import org.apache.solr.common.cloud.Slice;
-import org.apache.solr.common.cloud.ZkStateReader;
 import org.apache.solr.common.util.NamedList;
 import org.apache.solr.embedded.JettySolrRunner;
 import org.apache.solr.util.IdUtils;
@@ -182,7 +181,7 @@ public class MoveReplicaTest extends SolrCloudTestCase {
           if (!r.getNodeName().equals(targetNode)) {
             continue;
           }
-          if (!r.isActive(Collections.singleton(targetNode))) {
+          if (!r.isActive(Set.of(targetNode))) {
             log.info("Not active: {}", r);
             allActive = false;
           }
@@ -227,7 +226,7 @@ public class MoveReplicaTest extends SolrCloudTestCase {
           if (!r.getNodeName().equals(replica.getNodeName())) {
             continue;
           }
-          if (!r.isActive(Collections.singleton(replica.getNodeName()))) {
+          if (!r.isActive(Set.of(replica.getNodeName()))) {
             log.info("Not active yet: {}", r);
             allActive = false;
           }
@@ -342,9 +341,9 @@ public class MoveReplicaTest extends SolrCloudTestCase {
   }
 
   private Replica getRandomReplica(String coll, CloudSolrClient cloudClient) throws IOException {
-    List<Replica> replicas = cloudClient.getClusterState().getCollection(coll).getReplicas();
-    Collections.shuffle(replicas, random());
-    return replicas.get(0);
+    List<Replica> replicas =
+        cloudClient.getClusterState().getCollection(coll).replicaStream().toList();
+    return replicas.get(random().nextInt(replicas.size()));
   }
 
   private void checkNumOfCores(
@@ -364,35 +363,33 @@ public class MoveReplicaTest extends SolrCloudTestCase {
   private int getNumOfCores(
       CloudSolrClient cloudClient, String nodeName, String collectionName, String replicaType)
       throws IOException, SolrServerException {
-    try (SolrClient coreclient =
-        getHttpSolrClient(ZkStateReader.from(cloudClient).getBaseUrlForNodeName(nodeName))) {
-      CoreAdminResponse status = CoreAdminRequest.getStatus(null, coreclient);
-      if (status.getCoreStatus().size() == 0) {
-        return 0;
-      }
-      if (collectionName == null && replicaType == null) {
-        return status.getCoreStatus().size();
-      }
-      // filter size by collection name
-      int size = 0;
-      for (Map.Entry<String, CoreStatusResponse.SingleCoreData> coreStatusEntry :
-          status.getCoreStatus().entrySet()) {
-        if (collectionName != null) {
-          String coll = coreStatusEntry.getValue().cloud.collection;
-          if (!collectionName.equals(coll)) {
-            continue;
-          }
-        }
-        if (replicaType != null) {
-          String type = coreStatusEntry.getValue().cloud.replicaType;
-          if (!replicaType.equals(type)) {
-            continue;
-          }
-        }
-        size++;
-      }
-      return size;
+    SolrClient coreclient = cluster.getJetty(nodeName).getSolrClient();
+    CoreAdminResponse status = CoreAdminRequest.getStatus(null, coreclient);
+    if (status.getCoreStatus().size() == 0) {
+      return 0;
     }
+    if (collectionName == null && replicaType == null) {
+      return status.getCoreStatus().size();
+    }
+    // filter size by collection name
+    int size = 0;
+    for (Map.Entry<String, CoreStatusResponse.SingleCoreData> coreStatusEntry :
+        status.getCoreStatus().entrySet()) {
+      if (collectionName != null) {
+        String coll = coreStatusEntry.getValue().cloud.collection;
+        if (!collectionName.equals(coll)) {
+          continue;
+        }
+      }
+      if (replicaType != null) {
+        String type = coreStatusEntry.getValue().cloud.replicaType;
+        if (!replicaType.equals(type)) {
+          continue;
+        }
+      }
+      size++;
+    }
+    return size;
   }
 
   protected void addDocs(String collection, int numDocs) throws Exception {
