@@ -27,7 +27,6 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
 import java.time.Duration;
 import java.time.Instant;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -37,6 +36,9 @@ import java.util.concurrent.ExecutorService;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicReference;
+import org.apache.curator.CuratorZookeeperClient;
+import org.apache.curator.test.InstanceSpec;
+import org.apache.curator.test.TestingCluster;
 import org.apache.solr.SolrTestCaseJ4;
 import org.apache.solr.client.api.util.SolrVersion;
 import org.apache.solr.client.solrj.jetty.HttpJettySolrClient;
@@ -51,6 +53,7 @@ import org.apache.solr.common.cloud.ZkNodeProps;
 import org.apache.solr.common.cloud.ZkStateReader;
 import org.apache.solr.common.params.CollectionParams;
 import org.apache.solr.common.util.ExecutorUtil;
+import org.apache.solr.common.util.RetryUtil;
 import org.apache.solr.common.util.SolrNamedThreadFactory;
 import org.apache.solr.common.util.Utils;
 import org.apache.solr.core.CloudConfig;
@@ -250,14 +253,14 @@ public class ZkControllerTest extends SolrCloudTestCase {
                   new CoreDescriptor(
                       collectionName,
                       TEST_PATH(),
-                      Collections.emptyMap(),
+                      Map.of(),
                       new Properties(),
                       zkControllerRef.get());
               // non-existent coreNodeName, this will cause zkController.publishAndWaitForDownStates
               // to wait indefinitely when using coreNodeName but usage of core name alone will
               // return immediately
               descriptor.getCloudDescriptor().setCoreNodeName("core_node0");
-              return Collections.singletonList(descriptor);
+              return List.of(descriptor);
             }
           };
       ZkController zkController = null;
@@ -374,8 +377,7 @@ public class ZkControllerTest extends SolrCloudTestCase {
                   TimeUnit.SECONDS,
                   collectionState ->
                       Optional.ofNullable(collectionState)
-                              .map(DocCollection::getReplicas)
-                              .map(List::size)
+                              .map(c -> (int) c.replicaStream().count())
                               .orElse(0)
                           == 3);
         }
@@ -390,11 +392,10 @@ public class ZkControllerTest extends SolrCloudTestCase {
         zkController.getZkStateReader().forciblyRefreshAllClusterStateSlow();
         ClusterState clusterState = zkController.getClusterState();
 
-        Map<String, List<Replica>> replicasOnNode =
-            clusterState.getReplicaNamesPerCollectionOnNode(nodeName);
-        assertNotNull("There should be replicas on the existing node", replicasOnNode);
-        List<Replica> replicas = replicasOnNode.get(collectionName);
-        assertNotNull("There should be replicas for the collection on the existing node", replicas);
+        List<Replica> replicas =
+            clusterState.getCollection(collectionName).getReplicasOnNode(nodeName);
+        assertFalse(
+            "There should be replicas for the collection on the existing node", replicas.isEmpty());
         assertEquals(
             "Wrong number of replicas for the collection on the existing node", 1, replicas.size());
         for (Replica replica : replicas) {
@@ -767,6 +768,53 @@ public class ZkControllerTest extends SolrCloudTestCase {
     }
   }
 
+  @Test
+  public void testReconnectRecoveryRequiresSessionExpiration() throws Exception {
+    try (TestingCluster zkCluster = new TestingCluster(3)) {
+      zkCluster.start();
+      CoreContainer cc = getCoreContainer();
+      try {
+        CloudConfig cloudConfig = new CloudConfig.CloudConfigBuilder("127.0.0.1", 8983).build();
+        try (ZkController zkController =
+            new ZkController(cc, zkCluster.getConnectString(), TIMEOUT, cloudConfig)) {
+          AtomicInteger recoveries = new AtomicInteger();
+          zkController.addOnReconnectListener(recoveries::incrementAndGet);
+          CuratorZookeeperClient curatorClient =
+              zkController.getZkClient().getCuratorFramework().getZookeeperClient();
+
+          InstanceSpec connected = zkCluster.findConnectionInstance(curatorClient.getZooKeeper());
+          assertNotNull(connected);
+          zkCluster.killServer(connected);
+          RetryUtil.retryUntil(
+              "Solr did not connect to another ZooKeeper server",
+              30,
+              200,
+              TimeUnit.MILLISECONDS,
+              () -> zkCluster.findConnectionInstance(curatorClient.getZooKeeper()),
+              current -> current != null && !current.equals(connected));
+          assertEquals(
+              "A transient ZooKeeper reconnect must not trigger session-expiration recovery",
+              0,
+              recoveries.get());
+
+          curatorClient.getZooKeeper().getTestable().injectSessionExpiration();
+          RetryUtil.retryUntil(
+              "A reconnect after session expiration did not trigger recovery",
+              30,
+              200,
+              TimeUnit.MILLISECONDS,
+              () -> recoveries.get() == 1);
+          assertEquals(1, recoveries.get());
+        }
+      } finally {
+        cc.shutdown();
+      }
+    } finally {
+      // TestingCluster closes its quorum asynchronously; allow its worker threads to terminate.
+      Thread.sleep(3000);
+    }
+  }
+
   private CoreContainer getCoreContainer() {
     return new MockCoreContainer();
   }
@@ -784,7 +832,7 @@ public class ZkControllerTest extends SolrCloudTestCase {
     public MockCoreContainer() {
       super(SolrXmlConfig.fromString(TEST_PATH(), "<solr/>"));
       HttpShardHandlerFactory httpShardHandlerFactory = new HttpShardHandlerFactory();
-      httpShardHandlerFactory.init(new PluginInfo("shardHandlerFactory", Collections.emptyMap()));
+      httpShardHandlerFactory.init(new PluginInfo("shardHandlerFactory", Map.of()));
       this.shardHandlerFactory = httpShardHandlerFactory;
       this.coreAdminHandler = new CoreAdminHandler();
       this.metricManager = mock(SolrMetricManager.class);
