@@ -47,9 +47,9 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
+import java.util.Map;
 import java.util.concurrent.BlockingQueue;
 import java.util.concurrent.LinkedBlockingDeque;
 import java.util.concurrent.Semaphore;
@@ -277,7 +277,7 @@ public class AuditLoggerIntegrationTest extends SolrCloudAuthTestCase {
                   .get()
                   .cluster
                   .getSolrClient()
-                  .query("test", new MapSolrParams(Collections.singletonMap("q", "a(bc")));
+                  .query("test", new MapSolrParams(Map.of("q", "a(bc")));
             });
     final List<AuditEvent> events = testHarness.get().receiver.waitForAuditEvents(3);
     assertAuditEvent(events.get(0), COMPLETED, "/admin/cores");
