@@ -19,20 +19,18 @@ package org.apache.solr.handler.extraction;
 import com.carrotsearch.randomizedtesting.ThreadFilter;
 import com.carrotsearch.randomizedtesting.annotations.ThreadLeakFilters;
 import java.io.ByteArrayInputStream;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.util.Collections;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
 import org.apache.lucene.tests.util.QuickPatchThreadsFilter;
 import org.apache.solr.SolrIgnoredThreadsFilter;
 import org.apache.solr.SolrTestCaseJ4;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.handler.extraction.fromtika.ToXMLContentHandler;
-import org.junit.AfterClass;
-import org.junit.Assume;
-import org.junit.BeforeClass;
+import org.junit.ClassRule;
 import org.junit.Test;
-import org.testcontainers.containers.GenericContainer;
 
 /**
  * Integration tests for TikaServerExtractionBackend using a real Tika Server via Testcontainers.
@@ -59,32 +57,8 @@ public class TikaServerExtractionBackendTest extends SolrTestCaseJ4 {
     }
   }
 
-  private static GenericContainer<?> tika;
-  private static String baseUrl;
-
-  @SuppressWarnings("resource")
-  @BeforeClass
-  public static void startTikaServer() {
-    try {
-      tika = new GenericContainer<>("apache/tika:3.2.3.0-full").withExposedPorts(9998);
-      tika.start();
-      baseUrl = "http://" + tika.getHost() + ":" + tika.getMappedPort(9998);
-    } catch (Throwable t) {
-      // Skip tests if Docker/Testcontainers are not available in the environment
-      Assume.assumeNoException("Docker/Testcontainers not available; skipping TikaServer tests", t);
-    }
-  }
-
-  @AfterClass
-  public static void stopTikaServer() {
-    if (tika != null) {
-      try {
-        tika.stop();
-      } catch (Throwable ignore) {
-      }
-      tika = null;
-    }
-  }
+  @ClassRule
+  public static final TikaServerContainerRule tikaContainer = new TikaServerContainerRule();
 
   private static ExtractionRequest newRequest(
       String resourceName,
@@ -105,9 +79,9 @@ public class TikaServerExtractionBackendTest extends SolrTestCaseJ4 {
 
   @Test
   public void testExtractTextAndMetadata() throws Exception {
-    Assume.assumeTrue("Tika server container not started", tika != null);
-    try (TikaServerExtractionBackend backend = new TikaServerExtractionBackend(baseUrl)) {
-      byte[] data = "Hello TestContainers".getBytes(java.nio.charset.StandardCharsets.UTF_8);
+    try (TikaServerExtractionBackend backend =
+        new TikaServerExtractionBackend(tikaContainer.getBaseUrl())) {
+      byte[] data = "Hello TestContainers".getBytes(StandardCharsets.UTF_8);
       try (ByteArrayInputStream in = new ByteArrayInputStream(data)) {
         ExtractionResult res = backend.extract(in, newRequest("test.txt", "text/plain", "text"));
         assertNotNull(res);
@@ -125,9 +99,9 @@ public class TikaServerExtractionBackendTest extends SolrTestCaseJ4 {
 
   @Test
   public void testExtractWithSaxHandlerXml() throws Exception {
-    Assume.assumeTrue("Tika server container not started", tika != null);
-    try (TikaServerExtractionBackend backend = new TikaServerExtractionBackend(baseUrl)) {
-      byte[] data = "Hello XML".getBytes(java.nio.charset.StandardCharsets.UTF_8);
+    try (TikaServerExtractionBackend backend =
+        new TikaServerExtractionBackend(tikaContainer.getBaseUrl())) {
+      byte[] data = "Hello XML".getBytes(StandardCharsets.UTF_8);
       ExtractionRequest request = newRequest("test.txt", "text/plain", "xml");
       try (ByteArrayInputStream in = new ByteArrayInputStream(data)) {
         ToXMLContentHandler xmlHandler = new ToXMLContentHandler();
@@ -138,8 +112,8 @@ public class TikaServerExtractionBackendTest extends SolrTestCaseJ4 {
         // Tika Server may return XHTML without XML declaration; be flexible
         assertTrue(
             c.contains("<?xml")
-                || c.toLowerCase(java.util.Locale.ROOT).contains("<html")
-                || c.toLowerCase(java.util.Locale.ROOT).contains("<xhtml"));
+                || c.toLowerCase(Locale.ROOT).contains("<html")
+                || c.toLowerCase(Locale.ROOT).contains("<xhtml"));
         assertTrue(c.contains("Hello XML"));
       }
     }
@@ -147,8 +121,8 @@ public class TikaServerExtractionBackendTest extends SolrTestCaseJ4 {
 
   @Test
   public void testPdfWithImageRecursive() throws Exception {
-    Assume.assumeTrue("Tika server container not started", tika != null);
-    try (TikaServerExtractionBackend backend = new TikaServerExtractionBackend(baseUrl)) {
+    try (TikaServerExtractionBackend backend =
+        new TikaServerExtractionBackend(tikaContainer.getBaseUrl())) {
       byte[] data = Files.readAllBytes(getFile("extraction/pdf-with-image.pdf"));
       // Enable recursive extraction and set header to extract images from PDF
       ExtractionRequest request =
@@ -173,19 +147,18 @@ public class TikaServerExtractionBackendTest extends SolrTestCaseJ4 {
   }
 
   private ExtractionRequest newRequest(String file, String contentType, String content) {
-    return newRequest(file, contentType, content, false, Collections.emptyMap());
+    return newRequest(file, contentType, content, false, Map.of());
   }
 
   @Test
   public void testMaxCharsLimitEnforced() throws Exception {
-    Assume.assumeTrue("Tika server container not started", tika != null);
     // Set a very small max chars limit and attempt to extract more than that
     long maxChars = 10L;
     try (TikaServerExtractionBackend backend =
-        new TikaServerExtractionBackend(baseUrl, 180, null, maxChars)) {
+        new TikaServerExtractionBackend(tikaContainer.getBaseUrl(), 180, null, maxChars)) {
       byte[] data =
           ("This content is definitely longer than ten characters.")
-              .getBytes(java.nio.charset.StandardCharsets.UTF_8);
+              .getBytes(StandardCharsets.UTF_8);
       try (ByteArrayInputStream in = new ByteArrayInputStream(data)) {
         SolrException e =
             expectThrows(
@@ -201,13 +174,12 @@ public class TikaServerExtractionBackendTest extends SolrTestCaseJ4 {
 
   @Test
   public void testMaxCharsLimitEnforcedWithSaxHandler() throws Exception {
-    Assume.assumeTrue("Tika server container not started", tika != null);
     long maxChars = 10L;
     try (TikaServerExtractionBackend backend =
-        new TikaServerExtractionBackend(baseUrl, 180, null, maxChars)) {
+        new TikaServerExtractionBackend(tikaContainer.getBaseUrl(), 180, null, maxChars)) {
       byte[] data =
           ("This content is definitely longer than ten characters.")
-              .getBytes(java.nio.charset.StandardCharsets.UTF_8);
+              .getBytes(StandardCharsets.UTF_8);
       ExtractionRequest request = newRequest("test.txt", "text/plain", "xml");
       try (ByteArrayInputStream in = new ByteArrayInputStream(data)) {
         ToXMLContentHandler xmlHandler = new ToXMLContentHandler();
