@@ -31,7 +31,6 @@ import java.nio.charset.StandardCharsets;
 import java.security.cert.X509Certificate;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -129,7 +128,7 @@ public class JWTIssuerConfig {
         iss = wellKnownDiscoveryConfig.getIssuer();
       }
       if (jwksUrl == null) {
-        jwksUrl = Collections.singletonList(wellKnownDiscoveryConfig.getJwksUrl());
+        jwksUrl = List.of(wellKnownDiscoveryConfig.getJwksUrl());
       }
       if (authorizationEndpoint == null) {
         authorizationEndpoint = wellKnownDiscoveryConfig.getAuthorizationEndpoint();
@@ -265,8 +264,7 @@ public class JWTIssuerConfig {
    */
   @SuppressWarnings("unchecked")
   public JWTIssuerConfig setJwksUrl(Object jwksUrlListOrString) {
-    if (jwksUrlListOrString instanceof String)
-      this.jwksUrl = Collections.singletonList((String) jwksUrlListOrString);
+    if (jwksUrlListOrString instanceof String) this.jwksUrl = List.of((String) jwksUrlListOrString);
     else if (jwksUrlListOrString instanceof List) this.jwksUrl = (List<String>) jwksUrlListOrString;
     else if (jwksUrlListOrString != null)
       throw new SolrException(
@@ -514,7 +512,7 @@ public class JWTIssuerConfig {
      * Fetch well-known config from a URL, with optional list of trusted certificates
      *
      * @param url the url to fetch
-     * @param trustedCerts optional list of trusted SSL certs. May be null to fall-back to Java's
+     * @param trustedCerts optional list of trusted SSL certs. May be null to fall back to Java's
      *     defaults
      * @return an instance of WellKnownDiscoveryConfig object
      */
